remove scrollbar homepage fix

--- a/src/assets/stylesheets/homepage.css
+++ b/src/assets/stylesheets/homepage.css
@@ -30,7 +30,6 @@
     position: absolute;
     top: 0;
     width: 100%;
-    padding: 10px;
     align-items: center;
 }
 
