--- a/src/assets/stylesheets/subpage-content.css
+++ b/src/assets/stylesheets/subpage-content.css
@@ -171,7 +171,7 @@ a:hover{
     padding: 10px;
     font-size: 20pt;
     cursor: pointer;
-    color: var(--color-secondary);
+    color: black;
 }
 
 .t-shirt li svg{
